# gitpulse

./: .gitignore  Makefile  README.md  docker-compose.yaml
backend/: Dockerfile  config.py  main.py  pyproject.toml  schemas.py  test.db
backend/database/: db.py
backend/models/: model.py
consumer/: Dockerfile  config.py  database.py  main.py  models.py  pyproject.toml
frontend/: Dockerfile  eslint.config.mjs  nuxt.config.ts  package.json
frontend/app/: app.vue
frontend/app/components/: ActivityChart.vue
frontend/app/composables/: useEventStream.ts
frontend/app/layouts/: default.vue
frontend/app/pages/: feed.vue  index.vue
frontend/app/pages/repo/: [name].vue
producer/: config.py  main.py  pyproject.toml
