[tool.poetry]
name = "gitpulse-backend"
version = "0.1.0"
description = "Git Pulse A Data based Web Dev Project"
authors = ["Mohammed Jameel Shahid"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
fastapi = "^0.128.2"
requests = "^2.32.5"
sqlmodel = "^0.0.32"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
redis = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"