[tool.poetry]
name = "gitpulse-consumer"
version = "0.1.0"
description = "Worker to process GitHub events"
authors = ["Mohammed Jameel Shahid"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
requests = "^2.32.5"
sqlmodel = "^0.0.32"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
redis = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"